--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang=en> 
 <head>
-  <title>My cool page</title>
+  <title>Anjali's Mihi</title>
   <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <h1>This is my page</h1>
-    <p>and a paragraph!</p>
+    <h1>Ko Anjali toku ingoa</h1>
+    <p>(My name is Anjali)</p>
 
+    <h2> Nō India ōku tipuna</h2>
+    <p>(My ancestors are from India)</p>
+
+    <h3>Kei te noho au ki Wellington</h3>
+    <p>(I now live in Wellington)</p>
+
+    <h4>This is some information about me:</h4>
+    <ul> 
+    <li>My favourite colour is blue</li>
+    <li>My favourite food is sushi</li>
+    <li>I do taekwondo</li>
+    <li>I have a dog</li>
+    <li>I'm 15 years old</li>
+    <li>My birthday is on october 9th, 2010</li>
+    <li>My favourite subject is history</li>
+    </ul>
+<h4>My classes for 2026:</h4>
+    <ol>
+      <li>D-tech</li>
+      <li>English</li>
+      <li>Calculus</li>
+      <li>Science</li>
+      <li>P.E</li>
+      <li>History</li>
+    </ol>
+
+    
 </html>
+
+
