--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
       <li>History</li>
     </ol>
 
-    
+    <img src ="sushiw.jpeg" alt = "sushi">
+    <img src ="WellingtonW.jpeg" alt = "Wellington">
+    <img src ="Dog.jpeg" alt = "Dog">
 </html>
