Image resizing, gallery and my favourite things

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Anjali's Mihi</title>
   <link href="styles.css" rel="stylesheet">
+  <link href="index.html"> rel="Home page">
+  <link href="My favourite things" rel="My favourite things">
 </head>
 <body>
     <h1>Ko Anjali toku ingoa</h1>
@@ -34,7 +36,9 @@
       <li>History</li>
     </ol>
 
-    <img src ="sushiw.jpeg" alt = "sushi">
-    <img src ="WellingtonW.jpeg" alt = "Wellington">
-    <img src ="Dog.jpeg" alt = "Dog">
+    <img src ="sushi-resized.jpg" alt = "sushi">
+    <img src ="Wellington-resized.jpg" alt = "Wellington">
+    <img src ="Dog-resized.jpg" alt = "Dog">
+
+   
 </html>
