Linking new pages

--- a/Gallery.html
+++ b/Gallery.html
@@ -1,12 +1,23 @@
-!DOCTYPE html>
+
 <html lang=en> 
 <head>
     <meta charset="UTF-8">
     <title>Aspect ratio</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <a href = "index.html"> Home</a>
+    <a href = "Myfavouritethings.html"> Favourite things</a>
+    <a href = "Gallery.html"> Gallery</a>
 
 </head>
+
 <body> 
+    <h1>Gallery</h1>
+
+    <img src ="sushi-resized.jpg" alt = "sushi">
+    <img src ="Wellington-resized.jpg" alt = "Wellington">
+    <img src ="Dog-resized.jpg" alt = "Dog">
+
+
     
 </body>
 
