--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang=en> 
 <head>
   <title>Anjali's Mihi</title>
-  <link href="styles.css" rel="stylesheet">
-  <link href="index.html"> rel="Home page">
-  <link href="My favourite things" rel="My favourite things">
+  <link href="style.css" rel="stylesheet">
+  <link href="index.html" rel="Home page">
+  <link href="Myfavouritethings.html" rel="My favourite things">
+  <a href = "index.html"> Home</a>
+  <a href = "Myfavouritethings.html"> Favourite things</a>
+  <a href = "Gallery.html"> Gallery</a>
 </head>
 <body>
     <h1>Ko Anjali toku ingoa</h1>
