Style and colours

--- a/Gallery.html
+++ b/Gallery.html
@@ -13,9 +13,9 @@
 <body> 
     <h1>Gallery</h1>
 
-    <img src ="sushi-resized.jpg" alt = "sushi">
-    <img src ="Wellington-resized.jpg" alt = "Wellington">
-    <img src ="Dog-resized.jpg" alt = "Dog">
+    <img src ="sushiw-Final.jpg" alt = "sushi">
+    <img src ="WellingtonW-Final.jpg" alt = "Wellington">
+    <img src ="Dog-Final.jpg" alt = "Dog">
 
 
     
