--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang=en> 
 <head>
-  <title>Anjali's Mihi</title>
+ <nav>
   <link href="style.css" rel="stylesheet">
   <link href="index.html" rel="Home page">
   <link href="Myfavouritethings.html" rel="My favourite things">
   <a href = "index.html"> Home</a>
   <a href = "Myfavouritethings.html"> Favourite things</a>
   <a href = "Gallery.html"> Gallery</a>
+  </nav>
 </head>
 <body>
-    <h1>Ko Anjali toku ingoa</h1>
-    <p>(My name is Anjali)</p>
+  <main>
+  <h1 id ="myheader">Ko Anjali toku ingoa</h1>
 
     <h2> Nō India ōku tipuna</h2>
     <p>(My ancestors are from India)</p>
@@ -38,10 +39,11 @@
       <li>P.E</li>
       <li>History</li>
     </ol>
+  </main> 
 
-    <img src ="sushi-resized.jpg" alt = "sushi">
-    <img src ="Wellington-resized.jpg" alt = "Wellington">
-    <img src ="Dog-resized.jpg" alt = "Dog">
+    <img src ="sushiw-Final.jpg" alt = "sushi">
+    <img src ="WellingtonW-Final.jpg" alt = "Wellington">
+    <img src ="Dog-Final.jpg" alt = "Dog">
 
-   
+</body>
 </html>
