--- a/testindex.html
+++ b/testindex.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang=en> 
 <head>
-  <nav>
-  <link href="style.css" rel="stylesheet">
+<div class = "container">
+<nav>
+    <div class = "navbar">
+    <link href="style.css" rel="stylesheet">
   <link href="index.html" rel="Home page">
   <link href="Myfavouritethings.html" rel="My favourite things">
   <a href = "index.html"> Home</a>
   <a href = "Myfavouritethings.html"> Favourite things</a>
   <a href = "Gallery.html"> Gallery</a>
   </nav>
+</div>
 </head>
 <body>
   <main>
-  <h1 id ="myheader">Ko Anjali toku ingoa</h1>
+    <div class = "Header">
+    <h1>Ko Anjali toku ingoa</h1>
+    </div>
 
+    <div class = "Information">
     <h2> Nō India ōku tipuna</h2>
     <p>(My ancestors are from India)</p>
 
@@ -39,11 +45,12 @@
       <li>P.E</li>
       <li>History</li>
     </ol>
-  </main> 
+  </main>
+  </div> 
 
     <img src ="sushiw-Final.jpg" alt = "sushi">
     <img src ="WellingtonW-Final.jpg" alt = "Wellington">
     <img src ="Dog-Final.jpg" alt = "Dog">
-
+</div>  
 </body>
 </html>
