--- a/testindex.html
+++ b/testindex.html
@@ -2,7 +2,8 @@
 <html lang=en> 
 <head>
 <div class = "container">
-<nav>
+
+  <nav>
     <div class = "navbar">
     <link href="style.css" rel="stylesheet">
   <link href="index.html" rel="Home page">
@@ -48,9 +49,12 @@
   </main>
   </div> 
 
+  <div class = "Images">
     <img src ="sushiw-Final.jpg" alt = "sushi">
     <img src ="WellingtonW-Final.jpg" alt = "Wellington">
     <img src ="Dog-Final.jpg" alt = "Dog">
+</div>  
+
 </div>  
 </body>
 </html>
