More css grid-25th

--- a/testindex.html
+++ b/testindex.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang=en> 
 <head>
-<div class = "container">
-
-  <nav>
+  <link rel ="icon" type="image/png" href="icon.png">
+  <div class = "container">
+<nav>
     <div class = "navbar">
     <link href="style.css" rel="stylesheet">
   <link href="index.html" rel="Home page">
@@ -16,11 +16,11 @@
 </head>
 <body>
   <main>
-    <div class = "Header">
+    <div class = "header">
     <h1>Ko Anjali toku ingoa</h1>
     </div>
 
-    <div class = "Information">
+    <div class = "information">
     <h2> Nō India ōku tipuna</h2>
     <p>(My ancestors are from India)</p>
 
@@ -37,7 +37,9 @@
     <li>My birthday is on october 9th, 2010</li>
     <li>My favourite subject is history</li>
     </ul>
-<h4>My classes for 2026:</h4>
+    </div>
+    <div class = "list">
+    <h4>My classes for 2026:</h4>
     <ol>
       <li>D-tech</li>
       <li>English</li>
@@ -46,8 +48,9 @@
       <li>P.E</li>
       <li>History</li>
     </ol>
-  </main>
   </div> 
+  </main>
+  
 
   <div class = "Images">
     <img src ="sushiw-Final.jpg" alt = "sushi">
