--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang=en> 
 <head>
+  <link rel ="icon" type="image/png" href="icon.png">
   <nav>
   <link href="style.css" rel="stylesheet">
   <link href="index.html" rel="Home page">
@@ -9,6 +10,7 @@
   <a href = "Myfavouritethings.html"> Favourite things</a>
   <a href = "Gallery.html"> Gallery</a>
   </nav>
+
 </head>
 <body>
   <main>
