--- a/testindex.html
+++ b/testindex.html
@@ -2,9 +2,11 @@
 <html lang=en> 
 <head>
   <link rel ="icon" type="image/png" href="icon.png">
-  <div class = "container">
+ <title> Anjali's Mihi </title>
+  
+ <div class ="container">
 <nav>
-    <div class = "navbar">
+    <div class>
     <link href="style.css" rel="stylesheet">
   <link href="index.html" rel="Home page">
   <link href="Myfavouritethings.html" rel="My favourite things">
@@ -16,11 +18,11 @@
 </head>
 <body>
   <main>
-    <div class = "header">
+    <div>
     <h1>Ko Anjali toku ingoa</h1>
     </div>
 
-    <div class = "information">
+    <div>
     <h2> Nō India ōku tipuna</h2>
     <p>(My ancestors are from India)</p>
 
@@ -38,7 +40,7 @@
     <li>My favourite subject is history</li>
     </ul>
     </div>
-    <div class = "list">
+    <div>
     <h4>My classes for 2026:</h4>
     <ol>
       <li>D-tech</li>
@@ -52,9 +54,15 @@
   </main>
   
 
-  <div class = "Images">
+  <div>
     <img src ="sushiw-Final.jpg" alt = "sushi">
+    </div>
+    
+    <div>
     <img src ="WellingtonW-Final.jpg" alt = "Wellington">
+  </div>
+  
+  <div>
     <img src ="Dog-Final.jpg" alt = "Dog">
 </div>  
 
